# DoomRiders

./: .gitignore  MachP.pro
Include/: DR_GameShader.h  DR_ModelLoader.h  DR_Pipeline.h  DR_Skybox.h  DR_Spectator.h  DR_Texture.h  ogldev_app.h  ogldev_camera.h  ogldev_lights_common.h~  ogldev_math_3d.h
Src/: DR_GameShader.cpp  DR_ModelLoader.cpp  DR_Pipeline.cpp  DR_Skybox.cpp  DR_Spectator.cpp  DR_Texture.cpp  DoomRiders.cpp  math_3d.cpp  ogldev_util.cpp
build_support/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  DoomRiders  DoomRiders.cbp  Makefile  cmake_install.cmake  run  shader.fs  shader.vs  shader.vs~  zoki.cpp  zoki.cpp~  zoran.cpp  zoran.cpp~  zoran.cpp~~
build_support/DoomRiders.dir/: CXX.includecache  DependInfo.cmake  build.make  cmake_clean.cmake  depend.internal  depend.make  flags.make  link.txt
build_support/buildDebug/: Makefile
build_support/cmakemanual/: cmakemanual.pro
